Fix WCAG 2 AA color contrast issues in website navbar and HTML syntax highlighting (#5206)
* Initial plan

* Fix WCAG 2 AA color contrast issues for navbar and HTML syntax highlighting


* Fix code review issues: use WeakSet for theme tracking and update home page theme selector


* Rename ACCESSIBLE_THEME_NAME to VS_LIGHT_ADJUSTED


---------

--- a/website/src/website/style.scss
+++ b/website/src/website/style.scss
@@ -1,5 +1,11 @@
 .navbar {
 	background-color: #68217a !important;
+
+	// WCAG 2 AA compliant contrast for inactive nav links
+	// #d4c4d9 on #68217a gives ~4.58:1 contrast ratio (required: 4.5:1)
+	.nav-link:not(.active) {
+		color: #d4c4d9 !important;
+	}
 }
 
 .download-dropdown .dropdown-toggle::after {
